# pyqg

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yaml  release.yml  test.yml
docs/: conf.py  development.rst  index.rst  installation.rst  requirements.txt
docs/equations/: notation_layered.rst  notation_verticalmodes.rst
docs/examples/: barotropic.ipynb  layered.ipynb  linear_stability.ipynb  parameterizations.ipynb  sqg.ipynb  two-layer.ipynb
pyqg/: kernel.py  kernel.pyx  layered_model.py  model.py  qg_model.py
pyqg/tests/: test_reference_solns.py  test_xarray_output.py
src/pyqg/: __init__.py  kernel.py  layered_model.py  model.py  qg_model.py  xarray_output.py
tests/: test_diagnostic_tools.py  test_diagnostics.py  test_parameterizations.py  test_xarray_output.py
tests/fixtures/: LayeredModel_params.json
