[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pyqg"
description = "python quasigeostrophic model"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE.txt"]
authors = [
  {name = "pyqg team"},
]
dependencies = [
    "numpy>=1.22,<3",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Atmospheric Science"
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/pyqg/pyqg"
Documentation = "https://pyqg.readthedocs.io"
"Source Code" = "https://github.com/pyqg/pyqg"
"Issue Tracker" = "https://github.com/pyqg/pyqg/issues"

[tool.flit.sdist]
include = ["tests/"]
exclude = ["**/*~"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
addopts = [
  "--import-mode=importlib",
]
